fix navbar lang selector

--- a/src/components/navbar/Navbar.astro
+++ b/src/components/navbar/Navbar.astro
@@ -14,8 +14,8 @@ const company = SITE_NAME;
 const currentPath = Astro.url.pathname;
 
 const options = [
-  { code: 'es', label: t('navbar.lang_es') },
-  { code: 'en', label: t('navbar.lang_en') }
+  { code: 'es', label: t('navbar.lang_es'), icon: '/images/icons/flags/es.svg' },
+  { code: 'en', label: t('navbar.lang_en'), icon: '/images/icons/flags/en.svg' }
 ];
 ---
 
@@ -60,15 +60,11 @@ const options = [
       >{t("navbar.contact")}
       </a>
 
-      <a 
-        href={`/${lang}/portfolio`} 
-        class={`block text-lg font-semibold p-2 rounded relative ${currentPath.includes('/portfolio') ? 'active-mobile' : 'text-white'}`}
-      >{t("navbar.portfolio")}
-      </a>
-
       <div class="pt-4">
         <LangSelector lang={lang} options={options} client:load />
       </div>
+
+      
     </div>
   </div>
   <div class="pt-6 text-center text-white text-sm opacity-60">
@@ -111,18 +107,10 @@ const options = [
       </a> 
 
       <a 
-        href={`/${lang}/portfolio`} 
-        class={`text-xl font-semibold ${currentPath.includes('/portfolio') ? 'active' : 'text-white'}`}>
-        {t("navbar.portfolio")}
-      </a>
-  
-      <a 
         href={`/${lang}/contact`} 
         class={`text-xl font-semibold ${currentPath.includes('/contact') ? 'active' : 'text-white'}`}>
         {t("navbar.contact")}
       </a>
-
-      
 
     </div>
 
