--- a/src/components/index/IndexComponent.astro
+++ b/src/components/index/IndexComponent.astro
@@ -40,8 +40,8 @@ const { lang, t, title } = getI18nProps(Astro.params, 'home');
     </div>
   </div>
 
-<section class="my-8 px-4">
-  <h2 class="text-center text-3xl font-bold text-primary mb-6">Descubre cómo transformamos ideas en tecnología</h2>
+<section class="px-4 bg-gray-300 p-">
+  <h2 class="text-center text-3xl font-bold text-primary mb-6 mt-20">Descubre cómo transformamos ideas en tecnología</h2>
 
   <div class="mx-auto w-full max-w-3xl aspect-video rounded-xl overflow-hidden shadow-lg">
     <video
