--- a/src/components/index/IndexComponent.astro
+++ b/src/components/index/IndexComponent.astro
@@ -45,7 +45,7 @@ const { lang, t, title } = getI18nProps(Astro.params, 'home');
 
   <div class="mx-auto w-full max-w-3xl aspect-video rounded-xl overflow-hidden shadow-lg">
     <video
-      src="/videos/spot_famindex.mp4"
+      src="/videos/spot_famindex_2.mp4"
       controls
       class="w-full h-full object-cover"
     ></video>
