add hero and todo

--- a/src/components/index/IndexComponent.astro
+++ b/src/components/index/IndexComponent.astro
@@ -36,11 +36,11 @@ const { lang, t, title } = getI18nProps(Astro.params, 'home');
     </div>
 
     <div class="bg-gray-50 lg:absolute lg:inset-y-0 lg:right-0 lg:w-1/2">
-      <img src="/images/hero_2.svg" alt="" class="aspect-3/2 object-cover lg:aspect-auto lg:size-full" />
+      <img src="/images/hero_fam.png" alt="" class="aspect-3/2 object-cover lg:aspect-auto lg:size-full" />
     </div>
   </div>
 
-<section class="px-4 bg-gray-300 p-">
+<section class="px-4 bg-gray-300 pb-10">
   <h2 class="text-center text-3xl font-bold text-primary mb-6 mt-20">Descubre cómo transformamos ideas en tecnología</h2>
 
   <div class="mx-auto w-full max-w-3xl aspect-video rounded-xl overflow-hidden shadow-lg">
